Fixed visual issues, removed themer

--- a/src/components/PasswordLengthBox.scss
+++ b/src/components/PasswordLengthBox.scss
@@ -45,6 +45,7 @@
           justify-content: center;
           margin-right: -4px;
           button {
+            cursor: pointer;
             flex: 1 1 120px;
             margin: 2px 4px;
             padding: 8px;
@@ -52,7 +53,7 @@
             color: rgba(71, 71, 71, 1);
             background-color: #eeeeee;
             &:hover {
-              color: #eee;
+              color: rgba(71, 71, 71, 1);
               background-color: rgba(238, 238, 238, 0.8);
             }
             &.preset-button-active {
@@ -68,6 +69,7 @@
       align-items: center;
       margin-top: 10px;
       > button {
+        cursor: pointer;
         height: 32px;
         max-width: 48px;
         padding: 0px 15px;
