--- a/src/components/PasswordGenerator.scss
+++ b/src/components/PasswordGenerator.scss
@@ -24,10 +24,15 @@
 
 .button-group {
   > button {
+    cursor: pointer;
     float: left;
     height: 40px;
     border-right: none;
   }
+}
+
+button {
+  cursor: pointer;
 }
 
 #generate-password-button {
